bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!weekday || vacation==true)
  ^